# trossen_arm

./: .gitignore  CMakeLists.txt  Makefile  package.xml  requirements.txt
.docker/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: deb.yaml  docs.yaml  mcp-server.yaml
cmake/: Packaging.cmake  libtrossen_armConfig.cmake.in  libtrossen_armVersion.cmake
demos/cpp/: CMakeLists.txt  arm_discovery.cpp  cartesian_external_effort.cpp  cartesian_position.cpp  cartesian_velocity.cpp  configuration_in_yaml.cpp  configure_cleanup.cpp  default_configurations_wxai_v0.yaml  error_recovery.cpp  error_recovery_and_logging.cpp  gravity_compensation.cpp  gravity_compensation_partial.cpp  gripper_torque.cpp  joint_characteristics_finetune.cpp  mixed_interpolation_space.cpp  set_factory_reset_flag.cpp  set_gripper_force_limit_scaling_factor.cpp  set_ip_method.cpp  set_joint_characteristics.cpp  set_joint_limits.cpp  set_joints.cpp  set_links.cpp  set_manual_ip.cpp  set_mode.cpp  set_motor_parameters.cpp  set_torque_correction.cpp  simple_move.cpp  teleoperation.cpp
demos/python/: arm_discovery.py  camera_index_finder.py  cartesian_external_effort.py  cartesian_position.py  cartesian_velocity.py  configuration_in_yaml.py  configure_cleanup.py  default_configurations_wxai_v0.yaml  error_recovery.py  error_recovery_and_logging.py  gravity_compensation.py  gravity_compensation_partial.py  gripper_torque.py  joint_characteristics_finetune.py  mixed_interpolation_space.py  move.py  move_two.py  set_ip_method.py  (+12 more)
docs/: .gitignore  Doxyfile  Makefile  building.md  changelog.rst  community.rst  conf.py  downloads.rst  getting_started.rst  index.rst  programming_guide.rst  requirements.txt  service.rst  software_tools.rst  specifications.rst  troubleshooting.rst  tutorials.rst
release/: package.xml
scripts/: README.md  tuning.py
(+80 files in other folders)
